[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Login/ResetPassword.gd" type="Script" id=1]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=2]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=3]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=4]
[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=6]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/UI/LoadingWindow.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 5 )

[node name="ResetPassword" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -627.769, 396.898 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestWindow" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -86.5
margin_right = 175.0
margin_bottom = 86.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="RequestWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RequestWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -101.5
margin_right = 110.0
margin_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RequestWindow/VBoxContainer"]
margin_top = 43.0
margin_right = 224.0
margin_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Reset Password"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UsernameLineEdit" type="LineEdit" parent="RequestWindow/VBoxContainer"]
margin_top = 89.0
margin_right = 224.0
margin_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="RequestWindow/VBoxContainer"]
margin_top = 133.0
margin_right = 224.0
margin_bottom = 159.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RequestSubmitButton" type="Button" parent="RequestWindow/VBoxContainer/HBoxContainer"]
margin_left = 19.0
margin_right = 104.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 85, 26 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Submit"

[node name="RequestBackButton" type="Button" parent="RequestWindow/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 205.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 85, 26 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[node name="FormWindow" type="Control" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.0
margin_top = -114.5
margin_right = 175.0
margin_bottom = 114.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="FormWindow"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 6 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FormWindow"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -110.0
margin_top = -101.5
margin_right = 110.0
margin_bottom = 101.5
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="FormWindow/VBoxContainer"]
margin_top = 11.0
margin_right = 224.0
margin_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "Reset Password"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="FormWindow/VBoxContainer"]
margin_top = 53.0
margin_right = 224.0
margin_bottom = 153.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeLineEdit" type="LineEdit" parent="FormWindow/VBoxContainer/VBoxContainer"]
margin_right = 224.0
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
placeholder_text = "Code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLineEdit" type="LineEdit" parent="FormWindow/VBoxContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 224.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
secret = true
placeholder_text = "New Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLineEdit2" type="LineEdit" parent="FormWindow/VBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 224.0
margin_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 200, 28 )
custom_styles/read_only = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0.168627, 0.168627, 0.168627, 1 )
secret = true
placeholder_text = "Confirm New Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="FormWindow/VBoxContainer"]
margin_top = 165.0
margin_right = 224.0
margin_bottom = 191.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FormSubmitButton" type="Button" parent="FormWindow/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 104.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 70, 26 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Submit"

[node name="FormBackButton" type="Button" parent="FormWindow/VBoxContainer/HBoxContainer"]
margin_left = 120.0
margin_right = 190.0
margin_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 70, 26 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[node name="LoadingWindow" parent="." instance=ExtResource( 8 )]
visible = false

[node name="PopupHolder" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="RequestWindow/VBoxContainer/UsernameLineEdit" to="." method="on_Request_LineEdit_Enter"]
[connection signal="pressed" from="RequestWindow/VBoxContainer/HBoxContainer/RequestSubmitButton" to="." method="_on_RequestSubmitButton_pressed"]
[connection signal="pressed" from="RequestWindow/VBoxContainer/HBoxContainer/RequestBackButton" to="." method="_on_RequestBackButton_pressed"]
[connection signal="text_entered" from="FormWindow/VBoxContainer/VBoxContainer/CodeLineEdit" to="." method="on_Form_LineEdit_Enter"]
[connection signal="text_entered" from="FormWindow/VBoxContainer/VBoxContainer/PasswordLineEdit" to="." method="on_Form_LineEdit_Enter"]
[connection signal="text_entered" from="FormWindow/VBoxContainer/VBoxContainer/PasswordLineEdit2" to="." method="on_Form_LineEdit_Enter"]
[connection signal="pressed" from="FormWindow/VBoxContainer/HBoxContainer/FormSubmitButton" to="." method="_on_FormSubmitButton_pressed"]
[connection signal="pressed" from="FormWindow/VBoxContainer/HBoxContainer/FormBackButton" to="." method="_on_FormBackButton_pressed"]
